// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildLogsExtractionEsqlQuery generates the expected query for generic entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE entity.id IS NOT NULL
  AND entity.id != \\"\\"
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | SORT @timestamp ASC
  | LIMIT 10000
  | RENAME
    entity.id AS recent.entity.id
  | STATS
    recent.timestamp = MAX(@timestamp),
    recent.entity.name = LAST(entity.name, @timestamp),
 recent.entity.source = LAST(entity.source, @timestamp),
 recent.entity.type = LAST(entity.type, @timestamp),
 recent.entity.sub_type = LAST(entity.sub_type, @timestamp),
 recent.entity.url = LAST(entity.url, @timestamp),
 recent.entity.risk.calculated_level = LAST(entity.risk.calculated_level, @timestamp),
 recent.entity.risk.calculated_score = LAST(entity.risk.calculated_score, @timestamp),
 recent.entity.risk.calculated_score_norm = LAST(entity.risk.calculated_score_norm, @timestamp),
 recent.cloud.account.id = LAST(cloud.account.id, @timestamp),
 recent.cloud.account.name = LAST(cloud.account.name, @timestamp),
 recent.cloud.availability_zone = LAST(cloud.availability_zone, @timestamp),
 recent.cloud.instance.id = LAST(cloud.instance.id, @timestamp),
 recent.cloud.instance.name = LAST(cloud.instance.name, @timestamp),
 recent.cloud.machine.type = LAST(cloud.machine.type, @timestamp),
 recent.cloud.project.id = LAST(cloud.project.id, @timestamp),
 recent.cloud.project.name = LAST(cloud.project.name, @timestamp),
 recent.cloud.provider = LAST(cloud.provider, @timestamp),
 recent.cloud.region = LAST(cloud.region, @timestamp),
 recent.cloud.service.name = LAST(cloud.service.name, @timestamp),
 recent.host.architecture = LAST(host.architecture, @timestamp),
 recent.host.boot.id = LAST(host.boot.id, @timestamp),
 recent.host.cpu.usage = LAST(host.cpu.usage, @timestamp),
 recent.host.disk.read.bytes = LAST(host.disk.read.bytes, @timestamp),
 recent.host.disk.write.bytes = LAST(host.disk.write.bytes, @timestamp),
 recent.host.domain = LAST(host.domain, @timestamp),
 recent.host.hostname = LAST(host.hostname, @timestamp),
 recent.host.id = LAST(host.id, @timestamp),
 recent.host.mac = LAST(host.mac, @timestamp),
 recent.host.name = LAST(host.name, @timestamp),
 recent.host.network.egress.bytes = LAST(host.network.egress.bytes, @timestamp),
 recent.host.network.egress.packets = LAST(host.network.egress.packets, @timestamp),
 recent.host.network.ingress.bytes = LAST(host.network.ingress.bytes, @timestamp),
 recent.host.network.ingress.packets = LAST(host.network.ingress.packets, @timestamp),
 recent.host.pid_ns_ino = LAST(host.pid_ns_ino, @timestamp),
 recent.host.type = LAST(host.type, @timestamp),
 recent.host.uptime = LAST(host.uptime, @timestamp),
 recent.host.ip = LAST(host.ip, @timestamp),
 recent.user.domain = LAST(user.domain, @timestamp),
 recent.user.email = LAST(user.email, @timestamp),
 recent.user.roles = LAST(user.roles, @timestamp),
 recent.user.hash = LAST(user.hash, @timestamp),
 recent.user.id = LAST(user.id, @timestamp),
 recent.user.name = LAST(user.name, @timestamp),
 recent.user.full_name = LAST(user.full_name, @timestamp),
 recent.orchestrator.api_version = LAST(orchestrator.api_version, @timestamp),
 recent.orchestrator.cluster.id = LAST(orchestrator.cluster.id, @timestamp),
 recent.orchestrator.cluster.name = LAST(orchestrator.cluster.name, @timestamp),
 recent.orchestrator.cluster.url = LAST(orchestrator.cluster.url, @timestamp),
 recent.orchestrator.cluster.version = LAST(orchestrator.cluster.version, @timestamp),
 recent.orchestrator.namespace = LAST(orchestrator.namespace, @timestamp),
 recent.orchestrator.organization = LAST(orchestrator.organization, @timestamp),
 recent.orchestrator.resource.annotation = LAST(orchestrator.resource.annotation, @timestamp),
 recent.orchestrator.resource.id = LAST(orchestrator.resource.id, @timestamp),
 recent.orchestrator.resource.ip = LAST(orchestrator.resource.ip, @timestamp),
 recent.orchestrator.resource.label = LAST(orchestrator.resource.label, @timestamp),
 recent.orchestrator.resource.name = LAST(orchestrator.resource.name, @timestamp),
 recent.orchestrator.resource.parent.type = LAST(orchestrator.resource.parent.type, @timestamp),
 recent.orchestrator.resource.type = LAST(orchestrator.resource.type, @timestamp),
 recent.orchestrator.type = LAST(orchestrator.type, @timestamp),
 recent.entity.source = FIRST(_index, @timestamp),
 recent.asset.id = LAST(asset.id, @timestamp),
 recent.asset.name = LAST(asset.name, @timestamp),
 recent.asset.owner = LAST(asset.owner, @timestamp),
 recent.asset.serial_number = LAST(asset.serial_number, @timestamp),
 recent.asset.model = LAST(asset.model, @timestamp),
 recent.asset.vendor = LAST(asset.vendor, @timestamp),
 recent.asset.environment = LAST(asset.environment, @timestamp),
 recent.asset.criticality = LAST(asset.criticality, @timestamp),
 recent.asset.business_unit = LAST(asset.business_unit, @timestamp),
 recent.entity.risk.calculated_level = LAST(entity.risk.calculated_level, @timestamp),
 recent.entity.risk.calculated_score = LAST(entity.risk.calculated_score, @timestamp),
 recent.entity.risk.calculated_score_norm = LAST(entity.risk.calculated_score_norm, @timestamp)
    BY recent.entity.id
  | LOOKUP JOIN latest-index
      ON recent.entity.id == entity.id
  | RENAME
    recent.entity.id AS entity.id
  | EVAL
    entity.name = COALESCE(recent.entity.name, entity.name),
 entity.source = COALESCE(recent.entity.source, entity.source),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.risk.calculated_level = COALESCE(recent.entity.risk.calculated_level, entity.risk.calculated_level),
 entity.risk.calculated_score = COALESCE(recent.entity.risk.calculated_score, entity.risk.calculated_score),
 entity.risk.calculated_score_norm = COALESCE(recent.entity.risk.calculated_score_norm, entity.risk.calculated_score_norm),
 cloud.account.id = COALESCE(recent.cloud.account.id, cloud.account.id),
 cloud.account.name = COALESCE(recent.cloud.account.name, cloud.account.name),
 cloud.availability_zone = COALESCE(recent.cloud.availability_zone, cloud.availability_zone),
 cloud.instance.id = COALESCE(recent.cloud.instance.id, cloud.instance.id),
 cloud.instance.name = COALESCE(recent.cloud.instance.name, cloud.instance.name),
 cloud.machine.type = COALESCE(recent.cloud.machine.type, cloud.machine.type),
 cloud.project.id = COALESCE(recent.cloud.project.id, cloud.project.id),
 cloud.project.name = COALESCE(recent.cloud.project.name, cloud.project.name),
 cloud.provider = COALESCE(recent.cloud.provider, cloud.provider),
 cloud.region = COALESCE(recent.cloud.region, cloud.region),
 cloud.service.name = COALESCE(recent.cloud.service.name, cloud.service.name),
 host.architecture = COALESCE(recent.host.architecture, host.architecture),
 host.boot.id = COALESCE(recent.host.boot.id, host.boot.id),
 host.cpu.usage = COALESCE(recent.host.cpu.usage, host.cpu.usage),
 host.disk.read.bytes = COALESCE(recent.host.disk.read.bytes, host.disk.read.bytes),
 host.disk.write.bytes = COALESCE(recent.host.disk.write.bytes, host.disk.write.bytes),
 host.domain = COALESCE(recent.host.domain, host.domain),
 host.hostname = COALESCE(recent.host.hostname, host.hostname),
 host.id = COALESCE(recent.host.id, host.id),
 host.mac = COALESCE(recent.host.mac, host.mac),
 host.name = COALESCE(recent.host.name, host.name),
 host.network.egress.bytes = COALESCE(recent.host.network.egress.bytes, host.network.egress.bytes),
 host.network.egress.packets = COALESCE(recent.host.network.egress.packets, host.network.egress.packets),
 host.network.ingress.bytes = COALESCE(recent.host.network.ingress.bytes, host.network.ingress.bytes),
 host.network.ingress.packets = COALESCE(recent.host.network.ingress.packets, host.network.ingress.packets),
 host.pid_ns_ino = COALESCE(recent.host.pid_ns_ino, host.pid_ns_ino),
 host.type = COALESCE(recent.host.type, host.type),
 host.uptime = COALESCE(recent.host.uptime, host.uptime),
 host.ip = COALESCE(recent.host.ip, host.ip),
 user.domain = COALESCE(recent.user.domain, user.domain),
 user.email = COALESCE(recent.user.email, user.email),
 user.roles = COALESCE(recent.user.roles, user.roles),
 user.hash = COALESCE(recent.user.hash, user.hash),
 user.id = COALESCE(recent.user.id, user.id),
 user.name = COALESCE(recent.user.name, user.name),
 user.full_name = COALESCE(recent.user.full_name, user.full_name),
 orchestrator.api_version = COALESCE(recent.orchestrator.api_version, orchestrator.api_version),
 orchestrator.cluster.id = COALESCE(recent.orchestrator.cluster.id, orchestrator.cluster.id),
 orchestrator.cluster.name = COALESCE(recent.orchestrator.cluster.name, orchestrator.cluster.name),
 orchestrator.cluster.url = COALESCE(recent.orchestrator.cluster.url, orchestrator.cluster.url),
 orchestrator.cluster.version = COALESCE(recent.orchestrator.cluster.version, orchestrator.cluster.version),
 orchestrator.namespace = COALESCE(recent.orchestrator.namespace, orchestrator.namespace),
 orchestrator.organization = COALESCE(recent.orchestrator.organization, orchestrator.organization),
 orchestrator.resource.annotation = COALESCE(recent.orchestrator.resource.annotation, orchestrator.resource.annotation),
 orchestrator.resource.id = COALESCE(recent.orchestrator.resource.id, orchestrator.resource.id),
 orchestrator.resource.ip = COALESCE(recent.orchestrator.resource.ip, orchestrator.resource.ip),
 orchestrator.resource.label = COALESCE(recent.orchestrator.resource.label, orchestrator.resource.label),
 orchestrator.resource.name = COALESCE(recent.orchestrator.resource.name, orchestrator.resource.name),
 orchestrator.resource.parent.type = COALESCE(recent.orchestrator.resource.parent.type, orchestrator.resource.parent.type),
 orchestrator.resource.type = COALESCE(recent.orchestrator.resource.type, orchestrator.resource.type),
 orchestrator.type = COALESCE(recent.orchestrator.type, orchestrator.type),
 entity.source = COALESCE(entity.source, recent.entity.source),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 entity.risk.calculated_level = COALESCE(recent.entity.risk.calculated_level, entity.risk.calculated_level),
 entity.risk.calculated_score = COALESCE(recent.entity.risk.calculated_score, entity.risk.calculated_score),
 entity.risk.calculated_score_norm = COALESCE(recent.entity.risk.calculated_score_norm, entity.risk.calculated_score_norm),
 entity.id = entity.id,
    @timestamp = recent.timestamp,
 entity.name = COALESCE(entity.name, entity.id)
  | KEEP entity.name,
 entity.source,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.risk.calculated_level,
 entity.risk.calculated_score,
 entity.risk.calculated_score_norm,
 cloud.account.id,
 cloud.account.name,
 cloud.availability_zone,
 cloud.instance.id,
 cloud.instance.name,
 cloud.machine.type,
 cloud.project.id,
 cloud.project.name,
 cloud.provider,
 cloud.region,
 cloud.service.name,
 host.architecture,
 host.boot.id,
 host.cpu.usage,
 host.disk.read.bytes,
 host.disk.write.bytes,
 host.domain,
 host.hostname,
 host.id,
 host.mac,
 host.name,
 host.network.egress.bytes,
 host.network.egress.packets,
 host.network.ingress.bytes,
 host.network.ingress.packets,
 host.pid_ns_ino,
 host.type,
 host.uptime,
 host.ip,
 user.domain,
 user.email,
 user.roles,
 user.hash,
 user.id,
 user.name,
 user.full_name,
 orchestrator.api_version,
 orchestrator.cluster.id,
 orchestrator.cluster.name,
 orchestrator.cluster.url,
 orchestrator.cluster.version,
 orchestrator.namespace,
 orchestrator.organization,
 orchestrator.resource.annotation,
 orchestrator.resource.id,
 orchestrator.resource.ip,
 orchestrator.resource.label,
 orchestrator.resource.name,
 orchestrator.resource.parent.type,
 orchestrator.resource.type,
 orchestrator.type,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 entity.risk.calculated_level,
 entity.risk.calculated_score,
 entity.risk.calculated_score_norm,
 @timestamp,
 entity.id,
 entity.id
  | LIMIT 10000
  | EVAL entity.hashedId = HASH(\\"SHA256\\", entity.id)
  | SORT @timestamp ASC"
`;

exports[`buildLogsExtractionEsqlQuery generates the expected query for host entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE host.name IS NOT NULL
  AND host.name != \\"\\"
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | SORT @timestamp ASC
  | LIMIT 10000
  | RENAME
    host.name AS recent.host.name
  | STATS
    recent.timestamp = MAX(@timestamp),
    recent.host.domain = MV_DEDUPE(TOP(host.domain, 10)),
 recent.host.hostname = MV_DEDUPE(TOP(host.hostname, 10)),
 recent.host.id = MV_DEDUPE(TOP(host.id, 10)),
 recent.host.os.name = MV_DEDUPE(TOP(host.os.name, 10)),
 recent.host.os.type = MV_DEDUPE(TOP(host.os.type, 10)),
 recent.host.ip = MV_DEDUPE(TOP(host.ip, 10)),
 recent.host.mac = MV_DEDUPE(TOP(host.mac, 10)),
 recent.host.type = MV_DEDUPE(TOP(host.type, 10)),
 recent.host.architecture = MV_DEDUPE(TOP(host.architecture, 10)),
 recent.entity.source = FIRST(_index, @timestamp),
 recent.asset.id = LAST(asset.id, @timestamp),
 recent.asset.name = LAST(asset.name, @timestamp),
 recent.asset.owner = LAST(asset.owner, @timestamp),
 recent.asset.serial_number = LAST(asset.serial_number, @timestamp),
 recent.asset.model = LAST(asset.model, @timestamp),
 recent.asset.vendor = LAST(asset.vendor, @timestamp),
 recent.asset.environment = LAST(asset.environment, @timestamp),
 recent.asset.criticality = LAST(asset.criticality, @timestamp),
 recent.asset.business_unit = LAST(asset.business_unit, @timestamp),
 recent.host.risk.calculated_level = LAST(host.risk.calculated_level, @timestamp),
 recent.host.risk.calculated_score = LAST(host.risk.calculated_score, @timestamp),
 recent.host.risk.calculated_score_norm = LAST(host.risk.calculated_score_norm, @timestamp),
 recent.entity.name = LAST(host.entity.name, @timestamp),
 recent.entity.source = LAST(host.entity.source, @timestamp),
 recent.entity.type = LAST(host.entity.type, @timestamp),
 recent.entity.sub_type = LAST(host.entity.sub_type, @timestamp),
 recent.entity.url = LAST(host.entity.url, @timestamp),
 recent.entity.risk.calculated_level = LAST(host.entity.risk.calculated_level, @timestamp),
 recent.entity.risk.calculated_score = LAST(host.entity.risk.calculated_score, @timestamp),
 recent.entity.risk.calculated_score_norm = LAST(host.entity.risk.calculated_score_norm, @timestamp),
 recent.entity.relationships.Communicates_with = MV_DEDUPE(TOP(host.entity.relationships.Communicates_with, 10)),
 recent.entity.relationships.Depends_on = MV_DEDUPE(TOP(host.entity.relationships.Depends_on, 10)),
 recent.entity.relationships.Dependent_of = MV_DEDUPE(TOP(host.entity.relationships.Dependent_of, 10)),
 recent.entity.relationships.Owned_by = MV_DEDUPE(TOP(host.entity.relationships.Owned_by, 10)),
 recent.entity.relationships.Accessed_frequently_by = MV_DEDUPE(TOP(host.entity.relationships.Accessed_frequently_by, 10))
    BY recent.host.name
  | LOOKUP JOIN latest-index
      ON recent.host.name == host.name
  | RENAME
    recent.host.name AS host.name
  | EVAL
    host.domain = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.domain, host.domain), recent.host.domain)),
 host.hostname = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.hostname, host.hostname), recent.host.hostname)),
 host.id = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.id, host.id), recent.host.id)),
 host.os.name = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.os.name, host.os.name), recent.host.os.name)),
 host.os.type = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.os.type, host.os.type), recent.host.os.type)),
 host.ip = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.ip, host.ip), recent.host.ip)),
 host.mac = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.mac, host.mac), recent.host.mac)),
 host.type = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.type, host.type), recent.host.type)),
 host.architecture = MV_DEDUPE(COALESCE(MV_APPEND(recent.host.architecture, host.architecture), recent.host.architecture)),
 entity.source = COALESCE(entity.source, recent.entity.source),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 host.risk.calculated_level = COALESCE(recent.host.risk.calculated_level, host.risk.calculated_level),
 host.risk.calculated_score = COALESCE(recent.host.risk.calculated_score, host.risk.calculated_score),
 host.risk.calculated_score_norm = COALESCE(recent.host.risk.calculated_score_norm, host.risk.calculated_score_norm),
 entity.name = COALESCE(recent.entity.name, entity.name),
 entity.source = COALESCE(recent.entity.source, entity.source),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.risk.calculated_level = COALESCE(recent.entity.risk.calculated_level, entity.risk.calculated_level),
 entity.risk.calculated_score = COALESCE(recent.entity.risk.calculated_score, entity.risk.calculated_score),
 entity.risk.calculated_score_norm = COALESCE(recent.entity.risk.calculated_score_norm, entity.risk.calculated_score_norm),
 entity.relationships.Communicates_with = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Communicates_with, entity.relationships.Communicates_with), recent.entity.relationships.Communicates_with)),
 entity.relationships.Depends_on = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Depends_on, entity.relationships.Depends_on), recent.entity.relationships.Depends_on)),
 entity.relationships.Dependent_of = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Dependent_of, entity.relationships.Dependent_of), recent.entity.relationships.Dependent_of)),
 entity.relationships.Owned_by = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Owned_by, entity.relationships.Owned_by), recent.entity.relationships.Owned_by)),
 entity.relationships.Accessed_frequently_by = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Accessed_frequently_by, entity.relationships.Accessed_frequently_by), recent.entity.relationships.Accessed_frequently_by)),
 entity.id = host.name,
    @timestamp = recent.timestamp,
 entity.name = COALESCE(entity.name, entity.id)
  | KEEP host.domain,
 host.hostname,
 host.id,
 host.os.name,
 host.os.type,
 host.ip,
 host.mac,
 host.type,
 host.architecture,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 host.risk.calculated_level,
 host.risk.calculated_score,
 host.risk.calculated_score_norm,
 entity.name,
 entity.source,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.risk.calculated_level,
 entity.risk.calculated_score,
 entity.risk.calculated_score_norm,
 entity.relationships.Communicates_with,
 entity.relationships.Depends_on,
 entity.relationships.Dependent_of,
 entity.relationships.Owned_by,
 entity.relationships.Accessed_frequently_by,
 @timestamp,
 entity.id,
 host.name
  | LIMIT 10000
  | EVAL entity.hashedId = HASH(\\"SHA256\\", entity.id)
  | SORT @timestamp ASC"
`;

exports[`buildLogsExtractionEsqlQuery generates the expected query for service entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE service.name IS NOT NULL
  AND service.name != \\"\\"
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | SORT @timestamp ASC
  | LIMIT 10000
  | RENAME
    service.name AS recent.service.name
  | STATS
    recent.timestamp = MAX(@timestamp),
    recent.service.address = MV_DEDUPE(TOP(service.address, 10)),
 recent.service.environment = MV_DEDUPE(TOP(service.environment, 10)),
 recent.service.ephemeral_id = MV_DEDUPE(TOP(service.ephemeral_id, 10)),
 recent.service.id = MV_DEDUPE(TOP(service.id, 10)),
 recent.service.node.name = MV_DEDUPE(TOP(service.node.name, 10)),
 recent.service.node.roles = MV_DEDUPE(TOP(service.node.roles, 10)),
 recent.service.node.role = MV_DEDUPE(TOP(service.node.role, 10)),
 recent.service.state = LAST(service.state, @timestamp),
 recent.service.type = MV_DEDUPE(TOP(service.type, 10)),
 recent.service.version = LAST(service.version, @timestamp),
 recent.entity.source = FIRST(_index, @timestamp),
 recent.asset.id = LAST(asset.id, @timestamp),
 recent.asset.name = LAST(asset.name, @timestamp),
 recent.asset.owner = LAST(asset.owner, @timestamp),
 recent.asset.serial_number = LAST(asset.serial_number, @timestamp),
 recent.asset.model = LAST(asset.model, @timestamp),
 recent.asset.vendor = LAST(asset.vendor, @timestamp),
 recent.asset.environment = LAST(asset.environment, @timestamp),
 recent.asset.criticality = LAST(asset.criticality, @timestamp),
 recent.asset.business_unit = LAST(asset.business_unit, @timestamp),
 recent.service.risk.calculated_level = LAST(service.risk.calculated_level, @timestamp),
 recent.service.risk.calculated_score = LAST(service.risk.calculated_score, @timestamp),
 recent.service.risk.calculated_score_norm = LAST(service.risk.calculated_score_norm, @timestamp),
 recent.entity.name = LAST(service.entity.name, @timestamp),
 recent.entity.source = LAST(service.entity.source, @timestamp),
 recent.entity.type = LAST(service.entity.type, @timestamp),
 recent.entity.sub_type = LAST(service.entity.sub_type, @timestamp),
 recent.entity.url = LAST(service.entity.url, @timestamp),
 recent.entity.risk.calculated_level = LAST(service.entity.risk.calculated_level, @timestamp),
 recent.entity.risk.calculated_score = LAST(service.entity.risk.calculated_score, @timestamp),
 recent.entity.risk.calculated_score_norm = LAST(service.entity.risk.calculated_score_norm, @timestamp),
 recent.entity.relationships.Communicates_with = MV_DEDUPE(TOP(service.entity.relationships.Communicates_with, 10)),
 recent.entity.relationships.Depends_on = MV_DEDUPE(TOP(service.entity.relationships.Depends_on, 10)),
 recent.entity.relationships.Dependent_of = MV_DEDUPE(TOP(service.entity.relationships.Dependent_of, 10))
    BY recent.service.name
  | LOOKUP JOIN latest-index
      ON recent.service.name == service.name
  | RENAME
    recent.service.name AS service.name
  | EVAL
    service.address = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.address, service.address), recent.service.address)),
 service.environment = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.environment, service.environment), recent.service.environment)),
 service.ephemeral_id = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.ephemeral_id, service.ephemeral_id), recent.service.ephemeral_id)),
 service.id = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.id, service.id), recent.service.id)),
 service.node.name = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.node.name, service.node.name), recent.service.node.name)),
 service.node.roles = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.node.roles, service.node.roles), recent.service.node.roles)),
 service.node.role = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.node.role, service.node.role), recent.service.node.role)),
 service.state = COALESCE(recent.service.state, service.state),
 service.type = MV_DEDUPE(COALESCE(MV_APPEND(recent.service.type, service.type), recent.service.type)),
 service.version = COALESCE(recent.service.version, service.version),
 entity.source = COALESCE(entity.source, recent.entity.source),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 service.risk.calculated_level = COALESCE(recent.service.risk.calculated_level, service.risk.calculated_level),
 service.risk.calculated_score = COALESCE(recent.service.risk.calculated_score, service.risk.calculated_score),
 service.risk.calculated_score_norm = COALESCE(recent.service.risk.calculated_score_norm, service.risk.calculated_score_norm),
 entity.name = COALESCE(recent.entity.name, entity.name),
 entity.source = COALESCE(recent.entity.source, entity.source),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.risk.calculated_level = COALESCE(recent.entity.risk.calculated_level, entity.risk.calculated_level),
 entity.risk.calculated_score = COALESCE(recent.entity.risk.calculated_score, entity.risk.calculated_score),
 entity.risk.calculated_score_norm = COALESCE(recent.entity.risk.calculated_score_norm, entity.risk.calculated_score_norm),
 entity.relationships.Communicates_with = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Communicates_with, entity.relationships.Communicates_with), recent.entity.relationships.Communicates_with)),
 entity.relationships.Depends_on = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Depends_on, entity.relationships.Depends_on), recent.entity.relationships.Depends_on)),
 entity.relationships.Dependent_of = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Dependent_of, entity.relationships.Dependent_of), recent.entity.relationships.Dependent_of)),
 entity.id = service.name,
    @timestamp = recent.timestamp,
 entity.name = COALESCE(entity.name, entity.id)
  | KEEP service.address,
 service.environment,
 service.ephemeral_id,
 service.id,
 service.node.name,
 service.node.roles,
 service.node.role,
 service.state,
 service.type,
 service.version,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 service.risk.calculated_level,
 service.risk.calculated_score,
 service.risk.calculated_score_norm,
 entity.name,
 entity.source,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.risk.calculated_level,
 entity.risk.calculated_score,
 entity.risk.calculated_score_norm,
 entity.relationships.Communicates_with,
 entity.relationships.Depends_on,
 entity.relationships.Dependent_of,
 @timestamp,
 entity.id,
 service.name
  | LIMIT 10000
  | EVAL entity.hashedId = HASH(\\"SHA256\\", entity.id)
  | SORT @timestamp ASC"
`;

exports[`buildLogsExtractionEsqlQuery generates the expected query for user entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE user.name IS NOT NULL
  AND user.name != \\"\\"
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | SORT @timestamp ASC
  | LIMIT 10000
  | RENAME
    user.name AS recent.user.name
  | STATS
    recent.timestamp = MAX(@timestamp),
    recent.user.domain = MV_DEDUPE(TOP(user.domain, 10)),
 recent.user.email = MV_DEDUPE(TOP(user.email, 10)),
 recent.user.full_name = MV_DEDUPE(TOP(user.full_name, 10)),
 recent.user.hash = MV_DEDUPE(TOP(user.hash, 10)),
 recent.user.id = MV_DEDUPE(TOP(user.id, 10)),
 recent.user.roles = MV_DEDUPE(TOP(user.roles, 10)),
 recent.entity.source = FIRST(_index, @timestamp),
 recent.asset.id = LAST(asset.id, @timestamp),
 recent.asset.name = LAST(asset.name, @timestamp),
 recent.asset.owner = LAST(asset.owner, @timestamp),
 recent.asset.serial_number = LAST(asset.serial_number, @timestamp),
 recent.asset.model = LAST(asset.model, @timestamp),
 recent.asset.vendor = LAST(asset.vendor, @timestamp),
 recent.asset.environment = LAST(asset.environment, @timestamp),
 recent.asset.criticality = LAST(asset.criticality, @timestamp),
 recent.asset.business_unit = LAST(asset.business_unit, @timestamp),
 recent.user.risk.calculated_level = LAST(user.risk.calculated_level, @timestamp),
 recent.user.risk.calculated_score = LAST(user.risk.calculated_score, @timestamp),
 recent.user.risk.calculated_score_norm = LAST(user.risk.calculated_score_norm, @timestamp),
 recent.entity.name = LAST(user.entity.name, @timestamp),
 recent.entity.source = LAST(user.entity.source, @timestamp),
 recent.entity.type = LAST(user.entity.type, @timestamp),
 recent.entity.sub_type = LAST(user.entity.sub_type, @timestamp),
 recent.entity.url = LAST(user.entity.url, @timestamp),
 recent.entity.risk.calculated_level = LAST(user.entity.risk.calculated_level, @timestamp),
 recent.entity.risk.calculated_score = LAST(user.entity.risk.calculated_score, @timestamp),
 recent.entity.risk.calculated_score_norm = LAST(user.entity.risk.calculated_score_norm, @timestamp),
 recent.entity.relationships.Accesses_frequently = MV_DEDUPE(TOP(user.entity.relationships.Accesses_frequently, 10)),
 recent.entity.relationships.Owns = MV_DEDUPE(TOP(user.entity.relationships.Owns, 10)),
 recent.entity.relationships.Supervises = MV_DEDUPE(TOP(user.entity.relationships.Supervises, 10)),
 recent.entity.relationships.Supervised_by = MV_DEDUPE(TOP(user.entity.relationships.Supervised_by, 10))
    BY recent.user.name
  | LOOKUP JOIN latest-index
      ON recent.user.name == user.name
  | RENAME
    recent.user.name AS user.name
  | EVAL
    user.domain = MV_DEDUPE(COALESCE(MV_APPEND(recent.user.domain, user.domain), recent.user.domain)),
 user.email = MV_DEDUPE(COALESCE(MV_APPEND(recent.user.email, user.email), recent.user.email)),
 user.full_name = MV_DEDUPE(COALESCE(MV_APPEND(recent.user.full_name, user.full_name), recent.user.full_name)),
 user.hash = MV_DEDUPE(COALESCE(MV_APPEND(recent.user.hash, user.hash), recent.user.hash)),
 user.id = MV_DEDUPE(COALESCE(MV_APPEND(recent.user.id, user.id), recent.user.id)),
 user.roles = MV_DEDUPE(COALESCE(MV_APPEND(recent.user.roles, user.roles), recent.user.roles)),
 entity.source = COALESCE(entity.source, recent.entity.source),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 user.risk.calculated_level = COALESCE(recent.user.risk.calculated_level, user.risk.calculated_level),
 user.risk.calculated_score = COALESCE(recent.user.risk.calculated_score, user.risk.calculated_score),
 user.risk.calculated_score_norm = COALESCE(recent.user.risk.calculated_score_norm, user.risk.calculated_score_norm),
 entity.name = COALESCE(recent.entity.name, entity.name),
 entity.source = COALESCE(recent.entity.source, entity.source),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.risk.calculated_level = COALESCE(recent.entity.risk.calculated_level, entity.risk.calculated_level),
 entity.risk.calculated_score = COALESCE(recent.entity.risk.calculated_score, entity.risk.calculated_score),
 entity.risk.calculated_score_norm = COALESCE(recent.entity.risk.calculated_score_norm, entity.risk.calculated_score_norm),
 entity.relationships.Accesses_frequently = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Accesses_frequently, entity.relationships.Accesses_frequently), recent.entity.relationships.Accesses_frequently)),
 entity.relationships.Owns = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Owns, entity.relationships.Owns), recent.entity.relationships.Owns)),
 entity.relationships.Supervises = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Supervises, entity.relationships.Supervises), recent.entity.relationships.Supervises)),
 entity.relationships.Supervised_by = MV_DEDUPE(COALESCE(MV_APPEND(recent.entity.relationships.Supervised_by, entity.relationships.Supervised_by), recent.entity.relationships.Supervised_by)),
 entity.id = user.name,
    @timestamp = recent.timestamp,
 entity.name = COALESCE(entity.name, entity.id)
  | KEEP user.domain,
 user.email,
 user.full_name,
 user.hash,
 user.id,
 user.roles,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 user.risk.calculated_level,
 user.risk.calculated_score,
 user.risk.calculated_score_norm,
 entity.name,
 entity.source,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.risk.calculated_level,
 entity.risk.calculated_score,
 entity.risk.calculated_score_norm,
 entity.relationships.Accesses_frequently,
 entity.relationships.Owns,
 entity.relationships.Supervises,
 entity.relationships.Supervised_by,
 @timestamp,
 entity.id,
 user.name
  | LIMIT 10000
  | EVAL entity.hashedId = HASH(\\"SHA256\\", entity.id)
  | SORT @timestamp ASC"
`;
